--- a/style.css
+++ b/style.css
@@ -9,9 +9,17 @@
 body{
     font-family: 'Poppins', sans-serif;
     background-color: blueviolet;
+    color: white;
 }
 
-/* Style all font awesome icons */
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 200px;
+}
+
 .fa {
     padding: 20px;
     font-size: 30px;
@@ -19,23 +27,32 @@ body{
     text-align: center;
     text-decoration: none;
     border-radius: 50%;
+    color: rgb(78, 28, 128);
   }
   
-  /* Add a hover effect if you want */
+  h1{
+    font-size: 60px;
+  }
+
+  h3{
+    margin-top: 100px;
+    font-weight: 800;
+    color: rgb(78, 28, 128);
+  }
+
+  div{
+    margin-top: 10px;
+  }
+
   .fa:hover {
     opacity: 0.7;
   }
-  
-  /* Set a specific color for each brand */
-  
-  /* Facebook
-  .fa-facebook {
-    background: #3B5998;
-    color: white;
+
+  .footer--class{
+    position: fixed;
+    left: 0;
+    bottom: 30px;
+    width: 100%;
+    text-align: center;
+    font-size: 15px;
   }
-  
-    Twitter
-  .fa-twitter {
-    background: #55ACEE;
-    color: white;
-  } */
