--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ main{
     align-items: center;
     justify-content: center;
     margin-top: 200px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .fa {
@@ -56,3 +58,5 @@ main{
     text-align: center;
     font-size: 15px;
   }
+
+ 
